build_error.log

> Configure project :
Project : => no module-info.java found

> Task :compileJava FAILED
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\ComposeNoteController.java:41: error: cannot find symbol
        newNote.setLat(lat);
               ^
  symbol:   method setLat(double)
  location: variable newNote of type Note
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\ComposeNoteController.java:42: error: cannot find symbol
        newNote.setLng(lng);
               ^
  symbol:   method setLng(double)
  location: variable newNote of type Note
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\ui\UserInfoDialog.java:215: error: bad operand types for binary operator '!='
            if (user.getCreatedAt() != null) {
                                    ^
  first type:  long
  second type: <null>
C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\ui\UserInfoDialog.java:217: error: incompatible types: long cannot be converted to String
                    String dateStr = user.getCreatedAt(); 
                                                      ^
Note: C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\SyncService.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

[Incubating] Problems report is available at: file:///C:/Users/Rafsan%20Riasat/AndroidStudioProjects/VisiBoard/visiboard_pc/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\ui\UserInfoDialog.java:217: error: incompatible types: long cannot be converted to String
                      String dateStr = user.getCreatedAt(); 
                                                        ^
  Note: C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\services\SyncService.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\ui\UserInfoDialog.java:215: error: bad operand types for binary operator '!='
              if (user.getCreatedAt() != null) {
                                      ^
    first type:  long
    second type: <null>
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\ComposeNoteController.java:41: error: cannot find symbol
          newNote.setLat(lat);
                 ^
    symbol:   method setLat(double)
    location: variable newNote of type Note
  C:\Users\Rafsan Riasat\AndroidStudioProjects\VisiBoard\visiboard_pc\src\main\java\com\visiboard\pc\controller\ComposeNoteController.java:42: error: cannot find symbol
          newNote.setLng(lng);
                 ^
    symbol:   method setLng(double)
    location: variable newNote of type Note
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
1 actionable task: 1 executed
